4503
{code}
import scala.collection._
import scala.collection.generic._

trait MyLike[A] extends Seq[A] with GenericTraversableTemplate[A, MyColl] with SeqLike[A, MyColl[A]] {
   override def companion = null 
}

trait MyColl[A] extends MyLike[A] 
object MyColl extends SeqFactory[MyColl]
{code}

To diagnose the problem, I surrounded `BaseTypeSeq`'s `apply` method with a try/catch:
{code}
      case CyclicInheritance =>
        println("BaseTypeSeq error"+ (parents, elems.mkString("\n"), i))
        Thread.dumpStack()
        NoType
{code}

output:

{code}
aseTypeSeq error(List(java.lang.Object, MyLike[A]),MyColl[A]
MyLike[A]
Seq[A]
Iterable[A]
scala.collection.SeqLike[A,MyColl[A]]
scala.collection.IterableLike[A,MyColl[A]]
Traversable[A]
scala.collection.TraversableLike[A,MyColl[A]]
PartialFunction[Int,A]
Any
(Int) => A
scala.collection.TraversableOnce[A]
Equals
ScalaObject
scala.collection.generic.FilterMonadic[A,Seq[A]] with scala.collection.generic.FilterMonadic[A,Traversable[A]] with scala.collection.generic.FilterMonadic[A,Iterable[A]] with scala.collection.generic.FilterMonadic[A,MyColl[A]]
scala.collection.generic.HasNewBuilder[A,Seq[A]] with scala.collection.generic.HasNewBuilder[A,Traversable[A]] with scala.collection.generic.HasNewBuilder[A,Iterable[A]] with scala.collection.generic.HasNewBuilder[A,MyColl[A]]
java.lang.Object
Any,9)

java.lang.Exception: Stack trace
	at java.lang.Thread.dumpStack(Thread.java:1230)
	at scala.tools.nsc.symtab.BaseTypeSeqs$$BaseTypeSeq.apply(BaseTypeSeqs.scala:78)
	at scala.tools.nsc.typechecker.RefChecks$$RefCheckTransformer$$$$anonfun$$validateBaseTypes$$2.apply$$mcVI$$sp(RefChecks.scala:559)
...
	at scala.tools.nsc.typechecker.RefChecks$$RefCheckTransformer.validateBaseTypes(RefChecks.scala:558)
...
	at scala.tools.nsc.typechecker.RefChecks$$RefCheckTransformer.transform(RefChecks.scala:1236)

??? base <none> not found in basetypes of trait MyColl

/Users/adriaan/Desktop/bugs/t3676.scala:9: error: object creation impossible, since method newBuilder in class GenericCompanion of type [A]scala.collection.mutable.Builder[A,MyColl[A]] is not defined
object MyColl extends SeqFactory[MyColl]
       ^
/Users/adriaan/Desktop/bugs/t3676.scala:9: error: type arguments [MyColl] do not conform to class SeqFactory's type parameter bounds [CC[X] <: Seq[X] with scala.collection.generic.GenericTraversableTemplate[X,CC]]
object MyColl extends SeqFactory[MyColl]
                      ^
two errors found
{code}
